# future_predict

./: .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  config.py  main.py
apps/api/src/api/forecast/: __init__.py  artifacts.py  dependencies.py  errors.py  pack_orchestration.py  policy.py  repository.py  research_packs.py  router.py  schemas.py  service.py  trust.py
apps/api/src/api/forecast/probability/: __init__.py  phase_a_v1.py  phase_b_v1.py
apps/api/src/api/forecast/projection/: __init__.py  phase_c_v1.py
apps/api/src/api/research/: __init__.py  artifacts.py  azure_responses.py  costing.py  dependencies.py  extractors.py  graph.py  merge.py  nodes.py  poller.py  progress.py  query_policy.py  repository.py  router.py  routing.py  schemas.py  security.py  service.py
apps/api/tests/: conftest.py  live_helpers.py  research_fakes.py  research_v2_fakes.py  test_health.py  test_live_settings_validation.py  test_research_adapter.py  test_research_api.py  test_research_core.py  test_research_v2_contract.py
apps/api/tests/forecast/: test_numeric_units.py  test_phase_a_api.py  test_phase_b_api.py  test_phase_c_api.py  test_phase_c_repository.py  test_probability_artifacts.py
apps/api/tests/integration/: test_forecast_phase_a_integration.py  test_research_persistence_integration.py  test_research_policy_integration.py  test_research_rerun_guard_integration.py  test_research_workflow_integration.py
apps/api/tests/live/: test_azure_responses_live.py
apps/web/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  base.css  env.ts  main.tsx  notifications.ts  polling.ts  researchApiKey.ts  researchDefaults.ts  reviewer.ts  router.tsx  runStore.ts  tokens.css  types.ts
apps/web/src/api/: client.ts  forecast.test.ts  forecast.ts  research.ts
docs/: api.md  configuration.md  forecast-phase-a-manual-verification.md  operations.md  research-orchestrator.md  testing.md
(+45 files in other folders)
