[project]
name = "future-predict-api"
version = "0.1.0"
description = "FastAPI service for Future Predict."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.60",
  "langgraph-checkpoint-sqlite>=2.0.1",
  "openai>=1.59.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -m 'not live_api'"
markers = [
  "integration: local integration tests that exercise multiple app layers",
  "live_api: tests that call real Azure OpenAI / OpenAI APIs and may incur cost",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
